--- a/templates/bathroom/index.html.twig
+++ b/templates/bathroom/index.html.twig
@@ -16,8 +16,13 @@
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.0 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="accordion-item">
@@ -29,9 +34,13 @@
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this
-                    being filled with some actual content.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.1 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="accordion-item">
@@ -43,10 +52,13 @@
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.2 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="accordion-item">
@@ -58,10 +70,13 @@
             </h2>
             <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.3 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="accordion-item">
@@ -73,10 +88,13 @@
             </h2>
             <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.4 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="accordion-item">
@@ -88,10 +106,13 @@
             </h2>
             <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
                 data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.</div>
+                <div class="accordion-body">
+                    {% for item in project.items %}
+                    {% if item.department == project.items.department.5 %}
+                    <p><a href="{{ path("#", {id: item.id}) }}">{{ item.name }}</a></p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
