--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,4 @@
-body {
-    background-color: lightgray;
-}
+@import '~bootstrap/scss/bootstrap';
+@import 'variables.scss';
+@import 'home.scss';
+@import 'body.scss';
