--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,1 +1,1 @@
-<img class="navbar" src="{{ asset('build/images/logomano.png') }}" alt="logo ManoMano">
+<img class="navbar" src="{{ asset('build/images/manomano.png') }}" alt="logo ManoMano">
