--- a/templates/bathroom/index.html.twig
+++ b/templates/bathroom/index.html.twig
@@ -27,7 +27,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -52,7 +52,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -77,7 +77,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -102,7 +102,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -127,7 +127,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -152,7 +152,7 @@
                             {% else %}
                                 <input class="form-check-input" name="{{ category.name }}" type="checkbox"  id="defaultCheck1">
                             {% endif %}
-                            <label class="form-check-label" for="defaultCheck1"><a href="#">{{ category.name }}</a></label>
+                            <label class="form-check-label" for="defaultCheck1"><a href="{{ path("search") }}">{{ category.name }}</a></label>
                         </div>
                         {% endif %}
                         {% endfor %}
