--- a/assets/styles/body.scss
+++ b/assets/styles/body.scss
@@ -1,19 +1,31 @@
 body {
     background-color: $bg-primary;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin: 0;
     box-sizing: border-box;
     color: $text-primary;
+    
 
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
         color: $text-primary;
-        padding: 1rem;
+        padding: 1em;
         text-align: center;
     }
 
     a {
         text-decoration: none;
         color: $text-primary;
+    }
+
+    p {
+        font-size: 2.5rem;
+    }
+
+    .btn {
+        font-size: 2.5rem;
+        border-radius: 0.3em;
+        width: 8em;
+        height: 2.5em;
     }
 }
