--- a/assets/styles/sdb.scss
+++ b/assets/styles/sdb.scss
@@ -1,4 +1,31 @@
-.accordion-body {
-    display: flex;
-    flex-direction: column;
+.checkbox {
+
+    font-size: 2.5rem;
+
+    p {
+        font-size: 2.5rem;
+        color: $text-secondary;
+    }
+
+    .accordion-body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .accordion-button{
+        font-size: 3rem;
+    }
+
+    .form-check-input{
+
+        width: 1.5em;
+        height: 1.5em;
+        border: 1.5px $text-primary solid;
+        background-color: $bg-light;
+        border: none;
+
+        &:checked {
+            background-color: $bg-info;
+        }
+    }
 }
