--- a/assets/styles/sdb.scss
+++ b/assets/styles/sdb.scss
@@ -2,6 +2,10 @@
 
     font-size: 2.5rem;
 
+    .offcanvas-start {
+        width: 94%;
+    }
+
     p {
         font-size: 2.5rem;
         color: $text-secondary;
