--- a/templates/bathroom/index.html.twig
+++ b/templates/bathroom/index.html.twig
@@ -10,7 +10,7 @@
     <div class="d-flex flex-column p-4 mb-5 mx-auto align-items-center" style="width: 55rem">
         <p class="mb-5">Total de votre projet : XXXX € TTC</p>
         <div class="d-flex justify-content-around">
-            <button class="btn btn-info m-4" type="button">Ma checklist</button>
+            <a href="{{ path('dashboard') }}"><button class="btn btn-info m-4" type="button">Mes projets</button></a>
             <button class="btn btn-info m-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">Ma sélection</button>
         </div>
     </div>
