--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,1 +1,1 @@
-<img class="navbar" src="{{ asset('build/images/header.png') }}" alt="header ManoMano">
+<a href="{{ path('home') }}"><img class="navbar" src="{{ asset('build/images/header.png') }}" alt="header ManoMano"></a>
