--- a/assets/styles/body.scss
+++ b/assets/styles/body.scss
@@ -35,4 +35,10 @@ body {
         width: 8em;
         height: 2.5em;
     }
+
+    .card{
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+        
+        border: 0.2px $bg-light solid;
+    }
 }
