create lien help

--- a/assets/styles/sdb.scss
+++ b/assets/styles/sdb.scss
@@ -32,4 +32,10 @@
             background-color: $bg-info;
         }
     }
+
+    ul {
+        list-style: none;
+        background-color: $bg-light;
+    }
+
 }
