--- a/templates/bathroom/index.html.twig
+++ b/templates/bathroom/index.html.twig
@@ -277,6 +277,24 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/salle-de-bains-design-moderne-et-fonctionnelle-5954" target="_blank">
+                                            Salle de bains design moderne et fonctionnelle
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/vasque-ou-lavabo-que-choisir-pour-votre-salle-de-bains-6003" target="_blank">
+                                            Vasque ou lavabo que choisir pour votre salle de bains
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-poser-un-miroir-eclairant-de-salle-de-bain-6989" target="_blank">
+                                            Comment poser un miroir eclairant de salle de bain
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -302,6 +320,24 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-installer-un-radiateur-seche-serviettes-6789" target="_blank">
+                                            Comment installer un radiateur seche serviettes
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/robinet-de-bidet-comment-choisir-4199" target="_blank">
+                                            Robinet de bidet comment choisir
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/vmc-tout-savoir-4193" target="_blank">
+                                            VMC tout savoir
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -327,6 +363,19 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-choisir-son-eclairage-de-salle-de-bains-2880" target="_blank">
+                                            Comment choisir son eclairage de salle de bains
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/ampoules-a-economie-d-energie-et-eclairage-intelligent-7300" target="_blank">
+                                            Ampoules a economie d'energie et eclairage intelligent
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -352,6 +401,19 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/quelle-section-de-cable-electrique-choisir-6986" target="_blank">
+                                            Quelle section de cable electrique choisir
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-choisir-son-interrupteur-2899" target="_blank">
+                                            Comment choisir son interrupteur
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -377,6 +439,24 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/carrelage-ou-parquet-de-salle-de-bains-6012" target="_blank">
+                                            Carrelage ou parquet de salle de bains
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/quel-revetement-mural-choisir-pour-la-salle-de-bains-7111" target="_blank">
+                                            Quel revetement mural choisir pour la salle de bains
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-faire-un-joint-silicone-7086" target="_blank">
+                                            Comment faire un joint silicone
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -402,6 +482,24 @@
                                 </div>
                                 {% endif %}
                                 {% endfor %}
+                                <ul class="p-4 mt-5">
+                                    <p>Nos conseils :</p>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-choisir-ses-outils-de-plombier-2736" target="_blank">
+                                            Comment choisir ses outils de plombier
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/comment-choisir-ses-outils-de-carreleur-2502" target="_blank">
+                                            Comment choisir ses outils de carreleur
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.manomano.fr/conseil/epi-carreleur-quel-equipement-de-protection-individuelle-pour-un-carreleur-7030" target="_blank">
+                                            EPI carreleur, quel equipement de protection individuelle pour un carreleur
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
