--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <h1>Votre Résultat de recherche</h1>
     {% for item in items %}
-    <div class="row">
+    <a class="row" href="{{ path("additem", {"id": item.id}) }}">
         <div class="col-8 mx-auto m-4">
             <div class="card mx-auto">
                 <div class="card-body">
@@ -21,6 +21,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </a>
     {% endfor %}
 {% endblock %}
