change title page

--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SearchController!{% endblock %}
+{% block title %}Votre recherche{% endblock %}
 
 {% block body %}
 <h1>Votre Résultat de recherche</h1>
