fix btn title and otrho

--- a/templates/bathroom/index.html.twig
+++ b/templates/bathroom/index.html.twig
@@ -21,6 +21,7 @@
             <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">retour à la liste</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
+        <h1 style="text-align:center">Ma sélection</h1>
         <div class="offcanvas-body">
             <div class="card mx-auto" style="width: 55rem">
                 <div class="card-body">
@@ -217,6 +218,10 @@
                         <div class="p-4 d-flex w-100">
                             <button type="submit" class="btn btn-info mx-auto" >Ajouter au panier</button>
                         </div>
+                        <br>
+                        <div class="p-4 d-flex w-100">
+                            <button type="submit" class="btn btn-outline-primary mx-auto" >Faire un devis</button>
+                        </div>
 
                         {# ==================================================================== #}
                 </div>
@@ -258,17 +263,17 @@
                                     <p>Nos conseils :</p>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/salle-de-bains-design-moderne-et-fonctionnelle-5954" target="_blank">
-                                            Salle de bains design moderne et fonctionnelle
+                                            Salle de bain design moderne et fonctionnelle
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/vasque-ou-lavabo-que-choisir-pour-votre-salle-de-bains-6003" target="_blank">
-                                            Vasque ou lavabo que choisir pour votre salle de bains
+                                            Vasque ou lavabo que choisir pour votre salle de bain
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/comment-poser-un-miroir-eclairant-de-salle-de-bain-6989" target="_blank">
-                                            Comment poser un miroir eclairant de salle de bain
+                                            Comment poser un miroir éclairant de salle de bain
                                         </a>
                                     </li>
                                 </ul>
@@ -305,7 +310,7 @@
                                     <p>Nos conseils :</p>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/comment-installer-un-radiateur-seche-serviettes-6789" target="_blank">
-                                            Comment installer un radiateur seche serviettes
+                                            Comment installer un radiateur sèche serviettes
                                         </a>
                                     </li>
                                     <li>
@@ -352,12 +357,12 @@
                                     <p>Nos conseils :</p>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/comment-choisir-son-eclairage-de-salle-de-bains-2880" target="_blank">
-                                            Comment choisir son eclairage de salle de bains
+                                            Comment choisir son eclairage de salle de bain
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/ampoules-a-economie-d-energie-et-eclairage-intelligent-7300" target="_blank">
-                                            Ampoules a economie d'energie et eclairage intelligent
+                                            Ampoules à economie d'énergie et éclairage intelligent
                                         </a>
                                     </li>
                                 </ul>
@@ -394,7 +399,7 @@
                                     <p>Nos conseils :</p>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/quelle-section-de-cable-electrique-choisir-6986" target="_blank">
-                                            Quelle section de cable electrique choisir
+                                            Quelle section de câble électrique choisir
                                         </a>
                                     </li>
                                     <li>
@@ -441,7 +446,7 @@
                                     </li>
                                     <li>
                                         <a href="https://www.manomano.fr/conseil/quel-revetement-mural-choisir-pour-la-salle-de-bains-7111" target="_blank">
-                                            Quel revetement mural choisir pour la salle de bains
+                                            Quel revêtement mural choisir pour la salle de bains
                                         </a>
                                     </li>
                                     <li>
