rajout du message falsh

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,14 @@
 		{% include "_navbar.html.twig" %}
 	</header>
     <body>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+        
         {% block body %}{% endblock %}
     </body>
 </html>
