--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -3,15 +3,15 @@
 {% block title %}Votre recherche{% endblock %}
 
 {% block body %}
-<h1>Votre Résultat de recherche</h1>
-    {% for item in items %}
-    <a class="row" href="{{ path("additem", {"id": item.id}) }}">
+<h1>Votre résultat de recherche</h1>
+{% for item in items %}
+    <a class="row" href="{{ path(" additem", {"id": item.id}) }}">
         <div class="col-8 mx-auto m-4">
             <div class="card mx-auto">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-6 text-right">
-                            <img class="" src="{{item.picture}}" alt="image de {{item.name}}" height = "200px" width="200px">
+                            <img class="" src="{{item.picture}}" alt="image de {{item.name}}" height="200px" width="200px">
                         </div>
                         <div class="col-6 d-flex flex-column justify-content-around ">
                             <h5 class="card-title text-secondary">{{item.name}}</h5>
@@ -22,5 +22,5 @@
             </div>
         </div>
     </a>
-    {% endfor %}
+{% endfor %}
 {% endblock %}
